[gd_scene load_steps=8 format=3 uid="uid://dnt6n70w4pfk1"]

[ext_resource type="Script" path="res://screens/preparation/components/combatant_details/combatant_details.gd" id="1_w2it5"]
[ext_resource type="Texture2D" uid="uid://6cjmjcfeje3c" path="res://assets/hud/popup.png" id="2_mw8ss"]
[ext_resource type="Texture2D" uid="uid://b0p6lephwu67s" path="res://assets/hud/grey_overlay.png" id="3_d05o2"]
[ext_resource type="PackedScene" uid="uid://dy1oc5vnd2dpg" path="res://view/combatant_sprite_thumbnail/combatant_sprite_thumbnail.tscn" id="4_wuu0i"]
[ext_resource type="PackedScene" uid="uid://bpddpej0qo1sh" path="res://screens/preparation/components/price_button/price_button.tscn" id="5_d2a7w"]
[ext_resource type="Theme" uid="uid://cgj53xbuypu2k" path="res://assets/theme/theme.tres" id="5_jd8cs"]
[ext_resource type="PackedScene" uid="uid://kstjo3nfpx8k" path="res://view/traits/traits.tscn" id="7_c1pbx"]

[node name="CombatantDetails" type="Control"]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_w2it5")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_mw8ss")
patch_margin_left = 15
patch_margin_top = 15
patch_margin_right = 15
patch_margin_bottom = 15

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchRect/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="VBoxContainer2" type="VBoxContainer" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="Control" type="NinePatchRect" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(72, 72)
layout_mode = 2
texture = ExtResource("3_d05o2")
patch_margin_left = 7
patch_margin_top = 7
patch_margin_right = 7
patch_margin_bottom = 7

[node name="CombatantSpriteThumbnail" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/Control" instance=ExtResource("4_wuu0i")]
unique_name_in_owner = true
layout_mode = 0
offset_right = 32.0
offset_bottom = 32.0
scale = Vector2(2, 2)

[node name="SellButton" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2" instance=ExtResource("5_d2a7w")]
unique_name_in_owner = true
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="GridContainer" type="GridContainer" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 8
columns = 4

[node name="NameDt" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme = ExtResource("5_jd8cs")
theme_override_font_sizes/font_size = 16
text = "Name:"

[node name="NameDd" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("5_jd8cs")
theme_override_colors/font_color = Color(0.894118, 0.65098, 0.447059, 1)
theme_override_font_sizes/font_size = 16
text = "Ignotus"

[node name="GridContainer2" type="GridContainer" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 8
columns = 4

[node name="TypeDt" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/GridContainer2"]
layout_mode = 2
theme = ExtResource("5_jd8cs")
theme_override_font_sizes/font_size = 16
text = "Type:"

[node name="TypeDd" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/GridContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("5_jd8cs")
theme_override_font_sizes/font_size = 16
text = "Human"

[node name="WeaponDt" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/GridContainer2"]
layout_mode = 2
theme = ExtResource("5_jd8cs")
theme_override_font_sizes/font_size = 16
text = "Weapon:"

[node name="WeaponDd" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/GridContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("5_jd8cs")
theme_override_font_sizes/font_size = 16
text = "Sword"

[node name="HPDt" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/GridContainer2"]
layout_mode = 2
theme = ExtResource("5_jd8cs")
theme_override_font_sizes/font_size = 16
text = "HP:"

[node name="HPDd" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/GridContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("5_jd8cs")
theme_override_colors/font_color = Color(1, 0, 0.266667, 1)
theme_override_font_sizes/font_size = 16
text = "10"

[node name="DamageDt" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/GridContainer2"]
layout_mode = 2
theme = ExtResource("5_jd8cs")
theme_override_font_sizes/font_size = 16
text = "Damage:"

[node name="DamageDd" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/GridContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("5_jd8cs")
theme_override_colors/font_color = Color(1, 0, 0.266667, 1)
theme_override_font_sizes/font_size = 16
text = "1-2"

[node name="DefenseDt" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/GridContainer2"]
layout_mode = 2
theme = ExtResource("5_jd8cs")
theme_override_font_sizes/font_size = 16
text = "Defense:"

[node name="DefenseDd" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/GridContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("5_jd8cs")
theme_override_colors/font_color = Color(0.607843, 0.658824, 0.745098, 1)
theme_override_font_sizes/font_size = 16
text = "0"

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 8

[node name="Traits" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/MarginContainer" instance=ExtResource("7_c1pbx")]
layout_mode = 2
